javac compile bug